fix: issue #212 - problem width page width on mobile devices

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -118,10 +118,16 @@ body ::-webkit-scrollbar-thumb {
   background-color: var(--scrollbar-thumb-color);
 }
 
-.container {
-  display: flex;
-  position: relative;
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
+@media screen and (min-width: 1024px) {
+  .container {
+    display: flex;
+    position: relative;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+  }
 }
+
+
+
+
